fix minor spacing

--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -95,6 +95,9 @@
     background-color: #FFF;
     font-size: 1.4em;
   }
+  .units {
+    font-size: 1.2em;
+  }
   .category-info {
     margin: 5px 0;
   }
